// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTypeJitsi should render a post if the post type is not null, and should try to enrich the token 1`] = `
<DocumentFragment>
  <div>
    test has started a meeting
    <div
      style="margin-left: -20px; position: relative;"
    >
      <div
        style="border-radius: 4px; border-style: solid; border-width: 1px; border-color: #bdbdbf; margin: 5px 0px 5px 20px; padding: 2px 5px;"
      >
        <div
          style="border-left-style: solid; border-left-width: 4px; padding: 10px; border-left-color: #89AECB;"
        >
          <h1
            style="font-size: 16px; font-weight: 600; height: 22px; line-height: 18px; margin: 5px 0px 1px 0px; padding: 0px;"
          >
            Test topic
          </h1>
          <span>
            Meeting ID: 
            <a
              href="http://test-meeting-link/test?jwt=xxxxxxxxxxxx#config.callDisplayName=%22Test%20topic%22&userInfo.displayName=%22firstLast%22"
              rel="noopener noreferrer"
              target="_blank"
            >
              test
            </a>
          </span>
          <div>
            <div
              style="overflow-x: auto; overflow-y: hidden; padding-right: 5px; width: 100%;"
            >
              <div>
                <a
                  class="btn btn-lg btn-primary"
                  href="http://test-meeting-link/test?jwt=xxxxxxxxxxxx#config.callDisplayName=%22Test%20topic%22&userInfo.displayName=%22firstLast%22"
                  rel="noopener noreferrer"
                  style="font-family: Open Sans; font-size: 12px; font-weight: bold; letter-spacing: 1px; line-height: 19px; margin-top: 12px; border-radius: 4px; color: rgb(250, 186, 218);"
                  target="_blank"
                >
                  <i
                    style="padding-right: 8px; fill: #fabada;"
                  >
                    <svg
                      height="10px"
                      version="1.1"
                      viewBox="0 0 19 10"
                      width="19px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <title>
                        icon video small
                      </title>
                      <desc>
                        Created with Sketch.
                      </desc>
                      <defs>
                        <lineargradient
                          id="linearGradient-1"
                          x1="50%"
                          x2="50%"
                          y1="0%"
                          y2="100%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#FFFFFF"
                          />
                          <stop
                            offset="100%"
                            stop-color="#F4F4F4"
                          />
                        </lineargradient>
                      </defs>
                      <g
                        fill="currentColor"
                        fill-rule="evenodd"
                        id="v2"
                        stroke="none"
                        stroke-width="1"
                      >
                        <g
                          id="zoom-bot-&-drop-down"
                          transform="translate(-443.000000, -250.000000)"
                        >
                          <g
                            id="zoom-bot---share-meeting"
                            transform="translate(340.000000, 98.000000)"
                          >
                            <g
                              id="Send-Button"
                              transform="translate(83.000000, 136.000000)"
                            >
                              <g
                                id="icon-video-small"
                                transform="translate(20.000000, 16.000000)"
                              >
                                <path
                                  d="M1,0 L10,0 L10,0 C12.209139,-4.05812251e-16 14,1.790861 14,4 L14,9 L14,9 C14,9.55228475 13.5522847,10 13,10 L4,10 L4,10 C1.790861,10 2.705415e-16,8.209139 0,6 L0,1 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
                                  fill="currentColor"
                                  id="Rectangle-4"
                                />
                                <path
                                  d="M15.3667766,2.86236308 L17.3667766,1.22606168 L17.3667766,1.22606168 C17.794228,0.876342075 18.4242495,0.93935609 18.7739691,1.36680742 C18.9201398,1.54546732 19,1.76919482 19,2.00003079 L19,8.99999935 L19,8.99999935 C19,9.5522841 18.5522847,9.99999935 18,9.99999935 C17.769164,9.99999935 17.5454365,9.92013917 17.3667766,9.77396845 L15.3667766,8.13766705 L15.3667766,8.13766705 C15.1346326,7.94773826 15,7.66363761 15,7.36369795 L15,3.63633218 L15,3.63633218 C15,3.33639253 15.1346326,3.05229188 15.3667766,2.86236308 Z"
                                  fill="currentColor"
                                  id="Rectangle-5"
                                />
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                  </i>
                  JOIN MEETING
                </a>
              </div>
              <div
                style="margin-top: 10px;"
              >
                 Meeting link valid until: 
                <b>
                  Thu Jan 01 1970 00:02:03 GMT+0000 (Coordinated Universal Time)
                </b>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostTypeJitsi should render a post without token if there is no jwt token, and shouldn't try to enrich the token 1`] = `
<DocumentFragment>
  <div>
    test has started a meeting
    <div
      style="margin-left: -20px; position: relative;"
    >
      <div
        style="border-radius: 4px; border-style: solid; border-width: 1px; border-color: #bdbdbf; margin: 5px 0px 5px 20px; padding: 2px 5px;"
      >
        <div
          style="border-left-style: solid; border-left-width: 4px; padding: 10px; border-left-color: #89AECB;"
        >
          <h1
            style="font-size: 16px; font-weight: 600; height: 22px; line-height: 18px; margin: 5px 0px 1px 0px; padding: 0px;"
          >
            Test topic
          </h1>
          <span>
            Meeting ID: 
            <a
              href="http://test-meeting-link/test#config.callDisplayName=%22Test%20topic%22&userInfo.displayName=%22firstLast%22"
              rel="noopener noreferrer"
              target="_blank"
            >
              test
            </a>
          </span>
          <div>
            <div
              style="overflow-x: auto; overflow-y: hidden; padding-right: 5px; width: 100%;"
            >
              <div>
                <a
                  class="btn btn-lg btn-primary"
                  href="http://test-meeting-link/test#config.callDisplayName=%22Test%20topic%22&userInfo.displayName=%22firstLast%22"
                  rel="noopener noreferrer"
                  style="font-family: Open Sans; font-size: 12px; font-weight: bold; letter-spacing: 1px; line-height: 19px; margin-top: 12px; border-radius: 4px; color: rgb(250, 186, 218);"
                  target="_blank"
                >
                  <i
                    style="padding-right: 8px; fill: #fabada;"
                  >
                    <svg
                      height="10px"
                      version="1.1"
                      viewBox="0 0 19 10"
                      width="19px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <title>
                        icon video small
                      </title>
                      <desc>
                        Created with Sketch.
                      </desc>
                      <defs>
                        <lineargradient
                          id="linearGradient-1"
                          x1="50%"
                          x2="50%"
                          y1="0%"
                          y2="100%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#FFFFFF"
                          />
                          <stop
                            offset="100%"
                            stop-color="#F4F4F4"
                          />
                        </lineargradient>
                      </defs>
                      <g
                        fill="currentColor"
                        fill-rule="evenodd"
                        id="v2"
                        stroke="none"
                        stroke-width="1"
                      >
                        <g
                          id="zoom-bot-&-drop-down"
                          transform="translate(-443.000000, -250.000000)"
                        >
                          <g
                            id="zoom-bot---share-meeting"
                            transform="translate(340.000000, 98.000000)"
                          >
                            <g
                              id="Send-Button"
                              transform="translate(83.000000, 136.000000)"
                            >
                              <g
                                id="icon-video-small"
                                transform="translate(20.000000, 16.000000)"
                              >
                                <path
                                  d="M1,0 L10,0 L10,0 C12.209139,-4.05812251e-16 14,1.790861 14,4 L14,9 L14,9 C14,9.55228475 13.5522847,10 13,10 L4,10 L4,10 C1.790861,10 2.705415e-16,8.209139 0,6 L0,1 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
                                  fill="currentColor"
                                  id="Rectangle-4"
                                />
                                <path
                                  d="M15.3667766,2.86236308 L17.3667766,1.22606168 L17.3667766,1.22606168 C17.794228,0.876342075 18.4242495,0.93935609 18.7739691,1.36680742 C18.9201398,1.54546732 19,1.76919482 19,2.00003079 L19,8.99999935 L19,8.99999935 C19,9.5522841 18.5522847,9.99999935 18,9.99999935 C17.769164,9.99999935 17.5454365,9.92013917 17.3667766,9.77396845 L15.3667766,8.13766705 L15.3667766,8.13766705 C15.1346326,7.94773826 15,7.66363761 15,7.36369795 L15,3.63633218 L15,3.63633218 C15,3.33639253 15.1346326,3.05229188 15.3667766,2.86236308 Z"
                                  fill="currentColor"
                                  id="Rectangle-5"
                                />
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                  </i>
                  JOIN MEETING
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
